# utils-databricks

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.ini  Makefile  README.md  connect_to_storage.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  standardization_template.ipynb  tox.ini  transformation_template.ipynb  upload.py
.github/workflows/: python-package.yml  unittest.yml
adf/: parameters.py
dp_storage/: connector.py
src/custom_utils/: __init__.py  adf.py  dataframe.py  helper.py
src/custom_utils/catalog/: catalog_utils.py
src/custom_utils/config/: __init__.py  config.py
src/custom_utils/dp_storage/: __init__.py  config.py  connector.py  feedback_management.py  merge_management.py  quality.py  reader.py  table_management.py  validation.py  writer.py
src/custom_utils/file_handler/: file_handler.py
src/custom_utils/logging/: __init__.py  logger.py
src/custom_utils/path_utils/: __init__.py  path_utils.py
src/custom_utils/quality/: quality.py
src/custom_utils/transformations/: dataframe.py
src/custom_utils/utils/: package_installer.py  widget_installer.py
src/custom_utils/validation/: validation.py
src/test/: adf_test.py  helper_test.py
src/test/catalog/: test_catalog_utils.py
src/test/config/: test_config.py
src/test/custom_utils_test/: __init__.py
src/test/dp_storage/: reader_test.py  writer_test.py
src/test/logging/: test_logger.py
src/test/test_utils/: __init__.py  filesystem.py  widgets.py
src/test/validation/: __init__.py
template/t_{{cookiecutter.name}}/: file_{{cookiecutter.name}}.txt
template/t_{{name}}/: file_{{name}}.txt
test/: __init__.py  adf_test.py  helper_test.py  test_adf.py  test_helper.py
test/catalog/: test_catalog_utils.py
test/config/: __init__.py  test_config.py
test/custom_utils/: __init__.py  helper_test.py
test/custom_utils/catalog/: catalog_utils_test.py
test/custom_utils/config/: __init__.py
test/custom_utils/dp_storage/: writer_test.py
test/custom_utils/logging/: __init__.py
test/custom_utils/transformations/: __init__.py
test/custom_utils/validation/: __init__.py
test/dp_storage/: __init__.py  connector_test.py
test/file_handler/: test_file_handler.py
test/logging/: __init__.py  test_logger.py
test/quality/: test_quality.py
test/test_utils/: __init__.py  data_generation.py  filesystem.py  schema_strings.py  widgets.py
test/test_utils/dbutils/: widgets.py
test/transformations/: dataframe_test.py  test_dataframe.py
test/transformations/utils/: __init__.py  (+2 more)
test/validation/: test_validation.py  validation_test.py
(+14 files in other folders)
