[metadata]
name = databricks-custom-utils
version = 0.5.1
author = Energinet DataPlatform
author_email = dataplatform@energinet.dk
description = Utilities for data transformations in Azure Databricks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Open-Dataplatform/utils-databricks
project_urls =
    Bug Tracker = https://github.com/Open-Dataplatform/utils-databricks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
