[metadata]
name = databricks-custom-utils
version = 0.7.3

author = Energinet DataPlatform
author_email = dataplatform@energinet.dk
description = Utilities for data transformations in Azure Databricks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Open-Dataplatform/utils-databricks
project_urls =
    Bug Tracker = https://github.com/Open-Dataplatform/utils-databricks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    setuptools  # For pkg_resources
    sqlparse>=0.4.3  # Specify the version or range of versions

[options.packages.find]
where = src