[metadata]
name = databricks-custom-utils
version = 1.1.3

author = Energinet DataPlatform
author_email = dataplatform@energinet.dk
description = Utilities for data transformations in Azure Databricks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Open-Dataplatform/utils-databricks
project_urls =
    Bug Tracker = https://github.com/Open-Dataplatform/utils-databricks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    setuptools  # For pkg_resources
    sqlparse>=0.4.3  # Specify the version or range of versions
    tqdm>=4.67.1

[options.packages.find]
where = src

[options.extras_require]
testing = 
    pytest
    mypy
    flake8

[options.package_data]
custom-utils = py.typed

[flake8]
max-line-length = 160